--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,3 +3,7 @@
 @import './main/visual';
 @import './main/news';
 @import './common/Footer';
+@import './sub/department';
+@import './sub/gallery';
+@import './sub/location';
+@import './sub/youtube';
