scss순번 변경 및 스타일링

--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -2,6 +2,11 @@
 	width: 70vw;
 	min-height: 60vh;
 	margin: 100px auto;
+	.subVisual {
+		width: 100%;
+		height: 200px;
+		background-color: gray;
+	}
 	h1 {
 		font-size: 3rem;
 		margin-bottom: 40px;
