응용스타일링

--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -1,8 +1,13 @@
 .Youtube {
+	width: 100%;
 	h1 {
+		width: 70vw;
+		margin: 0px auto;
 		color: red;
+		margin-bottom: 40px;
 	}
-	p {
-		color: blue;
+	.con {
+		width: 70vw;
+		margin: 0px auto;
 	}
 }
